# dmpi

./: .gitignore
abi-proxy/: CMakeLists.txt  mpi_abi_proxy.cpp  mpi_abi_proxy.h  swig.i
